Perform tilde expansion in path
A path specified relative to the github user's home, like `~/path` fails, because the value of the variable `$INPUT_PATH` was not going through shell resolution again.

--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
       run: |
         tar \
           --dereference --hard-dereference \
-          --directory "$INPUT_PATH" \
+          --directory "$(echo "$INPUT_PATH")" \
           -cvf "$RUNNER_TEMP/artifact.tar" \
           --exclude=.git \
           --exclude=.github \
